2007-10-23  Akim Demaille  <demaille@gostai.com>

	Provide reference cases for all tests.
	* tests/test-deref.stdout: New.
	* tests/test-indent.stdout: New.
	* tests/test-separator.stdout: New.
	They are all empty.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Libport tests need Boost.
	* tests/Makefile.am (AM_CPPFLAGS): Pass BOOST_CPPFLAGS.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Don't include config.h/version.hh.
	* package-info.hcc: here.
	That's really too much of a problem.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	PackageInfo::name_version_revision.
	* package-info.hh, package-info.cc (<TITLE):
	New.
	* package-info.hcc: Inline the ctor.

2007-10-22  Akim Demaille  <akim.demaille@free.fr>

	<< PackageInfo.
	* package-info.hh: Declare it.
	* package-info.cc: New.
	* libport-sources.mk: Adjust.

2007-10-22  Akim Demaille  <demaille@gostai.com>

	package-info.
	* package-info.hcc: New.
	* package-info.hh: New.
	* Makefile.am: Adjust.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Define uint32_t before using it.
	* windows.hh: here.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Define useconds_t.
	* windows.hh: here.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Avoid macros.
	* windows.hh (sleep, usleep): Rewrite as inline functions.
	This has not been tested on Windows...

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a duplicate comment.
	* compiler.hh: Here.

2007-10-10  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add __PRETTY_FUNCTION__ support for MSVC.
	* compiler.hh [_MSC_VER]: Define __PRETTY_FUNCTION__.

2007-10-09  Thomas Moulard  <thomas@moulard.net>

	Disable shared-ptr if Boost is not available.
	* deref.hh,
	* deref.hxx: Here.
	* shared-ptr.hh: Include config.h, replace NO_BOOST by LIBPORT_NO_BOOST.

2007-10-09  Thomas Moulard  <thomas@moulard.net>

	Disable shared-ptr if NO_BOOST is defined.
	* README: Document.
	* shared-ptr.hh: Here.

2007-10-08  Akim Demaille  <demaille@gostai.com>
