@@ -1,5 +1,10 @@
 2007-10-23  Akim Demaille  <demaille@gostai.com>
 
+	Fwd decl PackageInfo.
+	* fwd.hh: here.
+
+2007-10-23  Akim Demaille  <demaille@gostai.com>
+
 	Provide reference cases for all tests.
 	* tests/test-deref.stdout: New.
 	* tests/test-indent.stdout: New.
